@@ -1,8 +1,8 @@
+if HAVE_SQLITE3
 INCLUDES = $(all_includes)
 AM_CXXFLAGS = -Wreturn-type -ffast-math $(CXX_CPU_SWITCH)
 METASOURCES = AUTO
 
-if HAVE_SQLITE3
 sqlite3_lflags = $(SQLITE3_LIBS)
 sqlite3_cflags = $(SQLITE3_CFLAGS)
 instruments_db_headers = \
@@ -10,12 +10,6 @@ instruments_db_headers = \
 instruments_db_sources = \
 	InstrumentsDb.cpp InstrumentsDb.h \
 	InstrumentsDbUtilities.cpp InstrumentsDbUtilities.h
-else
-sqlite3_lflags =
-sqlite3_cflags =
-instruments_db_headers =
-instruments_db_sources =
-endif
 
 ## no need to expose the instruments DB to the C++ API ATM
 #liblinuxsamplerdbincludedir = $(includedir)/linuxsampler/db
@@ -29,3 +23,4 @@ liblinuxsamplerdb_la_SOURCES = \
 liblinuxsamplerdb_la_LIBADD = $(sqlite3_lflags)
 liblinuxsamplerdb_la_CFLAGS = $(sqlite3_cflags)
 liblinuxsamplerdb_la_CXXFLAGS = $(sqlite3_cflags)
+endif
